update statified k fold, main.ipynb file

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,8 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "fa169647",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,17 +10,27 @@
     "import pandas as pd\n",
     "from scipy.stats.mstats import winsorize\n",
     "import lightgbm as lgb\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pickle\n",
+    "import joblib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "6ea193de",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def harness(data_path):\n",
+    "from imblearn.over_sampling import SMOTE\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def harness(data_path, model = 'rf'):\n",
     "\n",
     "    # Load dataset\n",
     "    df = pd.read_csv(data_path)\n",
@@ -68,22 +77,32 @@
     "    for col in df.columns:\n",
     "        df[col] = pd.Series(winsorize(df[col],limits=[0.2,0.2],nan_policy='omit')) \n",
     "        df[col] = df[col].fillna(df[col].mean())\n",
-    "\n",
-    "    model = lgb.Booster(model_file='model/lgb_classifier.txt')\n",
-    "\n",
-    "    pd.DataFrame(model.predict(df),columns=['default_prob']).to_csv('output.csv')"
+    "    \n",
+    "    if model =='lgb':\n",
+    "        clf = lgb.Booster(model_file='model/lgb_classifier.txt')\n",
+    "        pd.DataFrame(clf.predict(df),columns=['default_prob']).to_csv('output.csv')        \n",
+    "    else:\n",
+    "        clf = joblib.load('model/rfs_model.pkl')\n",
+    "        pd.DataFrame(clf.predict_proba(df),columns=['default_prob']).to_csv('output.csv')        \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a43741e2",
    "metadata": {},
    "outputs": [],
    "source": [
     "# input the holdout sample's path inside of this function\n",
-    "harness()"
+    "harness('data/train.csv',model='lgb')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -102,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
